--- a/smart-justice/src/main/resources/application-dev.yml
+++ b/smart-justice/src/main/resources/application-dev.yml
@@ -46,5 +46,8 @@ logging:
 python:
   env:
     python_env: "Z:\\SmartJustice\\intelligent_justice_flask\\venv\\Scripts\\python.exe"
-    case_analysis_path: "Z:\\SmartJustice\\intelligent_justice_flask\\algorithm\\algorithm_example.py"
+    ctv_focus_analysis_path: "Z:\\SmartJustice\\intelligent_justice_flask\\algorithm\\algorithm_example.py"
+    related_case_rec_path: "C:\Users\DELL\Desktop\互联网+\sim-calu\similar_example.py"
+    intelligent_ques_ans_path:
+    related_law_rec_path:
 
