--- a/smart-justice/src/main/resources/application-test.yml
+++ b/smart-justice/src/main/resources/application-test.yml
@@ -43,3 +43,6 @@ python:
     env:
         python_env: "Z:\\SmartJustice\\intelligent_justice_flask\\venv\\Scripts\\python.exe"
         case_analysis_path: "Z:\\SmartJustice\\intelligent_justice_flask\\algorithm\\algorithm_example.py"
+        related_case_rec_path:
+        intelligent_ques_ans_path:
+        related_law_rec_path:
