--- a/smart-justice/src/main/resources/application-dev.yml
+++ b/smart-justice/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/smartjustice?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
-    password: 12141x
+    password:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 #数据库连接池使用SpringBoot默认的hikari
