add(email):add the email auth

--- a/smart-justice/src/main/resources/application.yml
+++ b/smart-justice/src/main/resources/application.yml
@@ -4,3 +4,12 @@
 spring:
   profiles:
     active: dev
+# JavaMailSender 邮件发送的配置
+  mail:
+      host: smtp.qq.com
+      username: 949812478@qq.com
+      password: oljqzbqhlqprbeai
+      properties.mail.smtp.auth: true
+      properties.mail.smtp.starttls.enable: true
+      properties.mail.smtp.starttls.required: true
+      default-encoding: UTF-8
