--- a/smart-justice/src/main/resources/application.yml
+++ b/smart-justice/src/main/resources/application.yml
@@ -9,7 +9,14 @@ spring:
       host: smtp.qq.com
       username: 949812478@qq.com
       password: oljqzbqhlqprbeai
+      protocol: smtp
       properties.mail.smtp.auth: true
+      properties.mail.smtp.port: 465
+      properties.mail.display.sendmail: Javen
+      properties.mail.display.sendname: Spring Boot Guide Email
       properties.mail.smtp.starttls.enable: true
       properties.mail.smtp.starttls.required: true
-      default-encoding: UTF-8
+      properties.mail.smtp.ssl.enable: true
+      default-encoding: utf-8
+
+
