--- a/smart-justice/pom.xml
+++ b/smart-justice/pom.xml
@@ -93,6 +93,12 @@
             <version>5.3.5.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.54</version>
+        </dependency>
+
         <!--&lt;!&ndash; 基本依赖，仅操作 xls 格式只需引入此依赖 &ndash;&gt;-->
         <!--<dependency>-->
         <!--<groupId>org.apache.poi</groupId>-->
@@ -113,17 +119,6 @@
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.60</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
-        <!-- 模板引擎 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-
 
     </dependencies>
 
